--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "gh-pages": "ember build && ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\" && git push origin gh-pages:gh-pages -f"
   },
   "dependencies": {
+    "@ember/jquery": "^0.6.0",
+    "@ember/optional-features": "^0.7.0",
     "ember-cli-babel": "^7.4.0",
     "ember-cli-htmlbars": "^2.0.3",
     "ember-promise-utils": "^0.1.1",
     "ember-runtime-enumerable-includes-polyfill": "2.0.0",
-    "semantic-ui-css": "^2.2.14",
-    "@ember/jquery": "^0.6.0",
-    "@ember/optional-features": "^0.7.0"
+    "semantic-ui-css": "^2.4.1"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
